# litigation-support

./: .gitignore  divorce-schema.json  docker-compose.yml  download_models.py  spec_server.sh
.spec-workflow/: session.json
.spec-workflow/approvals/api-fetch-replacement/: approval_1756666872789_rf7hztj4r.json
.spec-workflow/approvals/cases/: approval_1756589958026_vk6bdu0he.json
.spec-workflow/approvals/contacts-roles-attributes/: approval_1756589613079_yqv1qxnyt.json
.spec-workflow/approvals/enhanced-user-profile/: approval_1756603701173_jc59cpzsn.json  approval_1756603979450_zht1skuld.json  approval_1756604142307_7u6qjm0nb.json
.spec-workflow/approvals/steering/: approval_1756522673743_kqu1cr7sd.json
.spec-workflow/specs/api-fetch-replacement/: requirements.md
.spec-workflow/specs/auth-recovery/: design.md  requirements.md  tasks.md
.spec-workflow/specs/cases/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
.windsurf/rules/: baby-steps.md  code-preferences.md  self-improving-windsurf.md  sequential-thinking.md  workflow-rules.md  writing-effective-windsurfrules.md
.windsurf/workflows/: create-backend-package.md  spec-create-design.md  spec-create-requirements.md  spec-create-tasks.md  spec-implement-tasks.md  spec-load-context.md  spec-steering-setup.md
assets/brand/: litigation-support-2025.ai
backend/: .gitignore  Dockerfile  alembic.ini  create_admin.py  create_admin_simple.py  main.py  pyproject.toml  set_admin.py
backend/alembic/: env.py
backend/alembic/versions/: 2025083021_add_email_connections.py  79adcfdc5037_add_archived_fields_to_email_connections.py  a0af9e3c8e17_add_middle_name_to_users_and_people.py  a579e8a1_fix_document_smart_text_relationship.py  adf3d7b0_add_cases_tables.py  d4524d3c24bb_initial_migration.py  e31070a73e61_enhance_user_profile_with_marriages_and_.py
backend/api/v1/: endpoints.py
backend/cases/: api.py  models.py  schemas.py  services.py  utils.py
backend/contacts/: __init__.py  api.py  models.py  schemas.py
backend/core/: config.py  database.py  email.py  rate_limiter.py  security.py  storage.py
backend/core/storages/: __init__.py  base.py  dropbox.py  factory.py  s3.py
backend/docs/: email-connections-api.md  email-connections-postman.json  email-harvesting-integration.md  openapi-email-connections.yaml
backend/email_connections/: api.py  deps.py  exceptions.py  gmail_client.py  harvesting_service.py  models.py  monitoring.py  oauth.py  schemas.py  services.py  utils.py
backend/galleries/: api.py  models.py  schemas.py  services.py
backend/images/: api.py  models.py  optimization_service.py  schemas.py  services.py  thumbnail_service.py  utils.py
backend/marriages/: api.py  deps.py  models.py  schemas.py  services.py
backend/storage/: api.py  models.py  schemas.py  services.py
backend/tags/: api.py  mixins.py  models.py  schemas.py  services.py
backend/tests/: conftest.py  run_model_tests.py
backend/tests/test_email_connections/: test_api.py  test_error_handling.py  test_harvesting_integration.py  test_models.py  test_models_simple.py  test_services.py
backend/users/: api.py  cleanup.py  deps.py  models.py  schemas.py  services.py
backend/vectordb/: __init__.py  api.py  api_embeddings.py  embeddings.py  services.py
frontend/: next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/: auth.ts  middleware.ts
(+268 files in other folders)
